# RaceSanitizer

./: .gitignore  README.md  Test.cc
lib/Instrumentation/: CMakeLists.txt  Transform.cpp
lib/Runtime/: Runtime.cpp
scripts/: bootstrap.sh  build_env.sh  diagnose.py  run.sh
